[package]
name = "discord-jira-integration"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.11", features = ["json"] }
actix-web = "4.1.0"
twilight-http = "0.15.0"
twilight-model = "0.15.0"
twilight-gateway = "0.15.0"
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15"
serde = "1"
serde_json = "1.0.94"
lazy_static = "1.4.0"
